--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="turno-container p-4" style="text-align: -webkit-center;">
+<div class="turno-container p-2" style="text-align: -webkit-center;">
     <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
 
-        <form class="m-3" ngNativeValidate #f="ngForm" (ngSubmit)="login( f )">
+        <form class="m-2" ngNativeValidate #f="ngForm" (ngSubmit)="login( f )">
 
             <!---------------------------------------------------------------------->
             <!-- EMAIL -->
@@ -47,14 +47,14 @@
                 <!---------------------------------------------------------------------->
                 <!-- INGRESAR / GOOGLE -->
                 <!---------------------------------------------------------------------->
-                <div class="text-center w-100">
+                <div class="text-center p-4 w-100">
 
                     <!-- Normal Login -->
-                    <button class="btn btn-success m-2" type="submit">Ingresar</button>
+                    <button class="btn btn-success btn-block btn-lg" type="submit">ENTRAR</button>
 
                     <!-- Google Login -->
-                    <button class="btn btn-danger m-2" type="button" id="btnGoogle" data-toggle="tooltip">Google
-                    </button>
+                    <!-- <button class="btn btn-danger m-2" type="button" id="btnGoogle" data-toggle="tooltip">Google
+                    </button> -->
 
                 </div>
 
