--- a/src/app/pages/public/tickets/tickets.component.html
+++ b/src/app/pages/public/tickets/tickets.component.html
@@ -1,4 +1,4 @@
-<div class="turno-container p-2" style="text-align: -webkit-center;">
+<div class="turno-container p-2 animated fadeIn" style="text-align: -webkit-center;">
   <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
 
     <div class="card-header">OBTENER TURNO</div>
