--- a/src/app/pages/public/screen/screen.component.html
+++ b/src/app/pages/public/screen/screen.component.html
@@ -1,4 +1,4 @@
-<div class="row p-3">
+<div class="row p-3 animated fadeIn">
     <div class="col-md-6">
 
         <!-- ======================================================== -->
@@ -49,17 +49,6 @@
             </div>
         </div>
 
-        <!-- ======================================================== -->
-        <!-- EN CAMINO / CANCELAR TURNO -->
-        <!-- ======================================================== -->
-        
-        <div class="text-center mb-4">
-            <span *ngIf="ticketsService.myTicket" class="btn btn-danger text-uppercase m-2"
-                (click)="cancelTicket()">Cancelar Turno</span>
-            <span *ngIf="ticketsService.myTicket?.id_desk && !coming"
-                class="btn btn-success text-uppercase m-2" (click)="enCamino()">en
-                camino</span>
-        </div>
 
         <!-- ======================================================== -->
         <!-- ULTIMO TURNO -->
@@ -69,6 +58,12 @@
             <div class="card-header banner-title">ULTIMO TURNO</div>
             <div class="banner-content" style="background-color: rgb(141, 51, 51)">
 
+                <div *ngIf="!ticketsService.lastTicket">
+                    <span class="xxxxl">
+                        --
+                        --
+                    </span>
+                </div>
                 <div>
                     <span class="xxxxl">
                         {{ ticketsService.lastTicket?.cd_skill }}
@@ -95,20 +90,10 @@
         <!-- HISTORIAL DE LLAMADAS -->
         <!-- ======================================================== -->
 
-        <!-- class="card bg-warning d-flex justify-content-sm-start justify-content-end justify-content-sm-end align-items-center -->
         <div class="card text-white bg-primary mb-4">
             <div class="card-header banner-title">HISTORIAL DE LLAMADOS</div>
 
-            <div class="rounded d-flex banner-content" style="background-color: rgb(54, 77, 194)"
-                *ngIf="ticketsService.ticketsTail.length===0">
-                <div class="d-flex justify-content-center text-white banner-title" style="width: 100%">
-                    <span>espere...</span>
-                </div>
-            </div>
-
-
-            <div class="card-body card-tickets-info table-responsive-sm" style="background-color: rgb(54, 77, 194)"
-                *ngIf="ticketsService.ticketsTail.length>0">
+            <div class="card-body card-tickets-info table-responsive-sm" style="background-color: rgb(54, 77, 194)">
 
                 <table class="table table text-white text-center" style="font-size: x-large;">
 
@@ -117,7 +102,11 @@
                         <td> </td>
                         <td> Escritorio </td>
                     </tr>
-
+                    <tr *ngIf="ticketsService.ticketsTail.length === 0">
+                        <td>--</td>
+                        <td></td>
+                        <td>--</td>
+                    </tr>
                     <tr *ngFor="let ticket of ticketsService.ticketsTail;">
                         <td style="text-align: center; width: 50%;">
                             {{ ticket.cd_skill }}{{ ticket.id_ticket }}</td>
@@ -132,6 +121,23 @@
                 </table>
 
             </div>
+        </div>
+
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col">
+
+        <!-- ======================================================== -->
+        <!-- PUBLIC PANEL -->
+        <!-- ======================================================== -->
+
+        <div *ngIf="ticketsService.myTicket" class="text-center footer-panel">
+            <button class="btn btn-danger text-uppercase m-2" (click)="cancelTicket()">Cancelar Turno</button>
+            <button [disabled]="!ticketsService.myTicket?.id_desk || coming" class="btn btn-success text-uppercase m-2"
+                (click)="enCamino()">en camino</button>
         </div>
 
     </div>
