--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,16 @@ textarea:focus { outline: none; }
 input:focus { outline: none; }
 div:focus { outline: none; }
 
+
+/* button panels */
+.footer-panel {
+    position        : fixed;
+    bottom          : 0px;
+    background-color: white;
+    width           : 100%;
+    box-shadow: 0px 0px 20px 0px rgb(0 0 0);
+  }
+
 /* list no warp */
 .mat-select-option-nowarp {
     float: left;
